# lidar_corners

./: .gitignore  CMakeLists.txt  Makefile  README.md  package.xml
config/: lidar_detect_board_node.yaml
debian/: .gitignore  changelog  control  copyright  rules
include/: Corners.h  GroundRemoval.h  PreprocessUtils.h  Utils.h  lidar_corners_node.hpp  lidar_detect_board_node.hpp
launch/: lidar_corners.launch.py  lidar_detect_board.launch.py  lidar_detect_board.launch.xml
src/: Corners.cpp  GroundRemoval.cpp  detect_calib_board.cpp  lidar_corners_node.cpp  lidar_detect_board_node.cpp
